Add Kanban-ui Deployment/Service

--- a/ingress-controller.yaml
+++ b/ingress-controller.yaml
@@ -16,7 +16,7 @@ spec:
                 name: adminer
                 port:
                   number: 8080
-    - host: kanban.k8s.com
+    - host: kanbano.k8s.com
       http:
         paths: 
           - path: /api/
