--- a/ingress-controller.yaml
+++ b/ingress-controller.yaml
@@ -26,3 +26,10 @@ spec:
                 name: kanban-app
                 port:
                   number: 8080
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: kanban-ui
+                port:
+                  number: 80
