Update ingress template

--- a/ingress/values.yaml
+++ b/ingress/values.yaml
@@ -8,6 +8,7 @@ ingress:
     - host: chart-example.local
       paths: 
         - path: /
+          pathType: Prefix
           backend:
             serviceName: serviceName
             servicePort: 8080
