--- a/ingress.yaml
+++ b/ingress.yaml
@@ -3,16 +3,19 @@ ingress:
     - host: adminero-helm.k8s.com
       paths:
         - path: /
+          pathType: Prefix
           backend:  
             serviceName: adminer
             servicePort: 8080
     - host: kanbano-helm.k8s.com
       paths: 
         - path: /api/
+          pathType: Prefix
           backend:
             serviceName: kanban-app
             servicePort: 8080
         - path: /
+          pathType: Prefix
           backend:
             serviceName: kanban-ui
             servicePort: 80
