--- a/ingress/templates/ingress.yaml
+++ b/ingress/templates/ingress.yaml
@@ -13,8 +13,11 @@ spec:
         paths:
         {{- range .paths }}
           - path: {{ .path }}
+            pathType: {{ .pathType }}
             backend:
-              serviceName: {{ .backend.serviceName }}
-              servicePort: {{ .backend.servicePort }}
+              service:
+                name: {{ .backend.serviceName }}
+                port:
+                  number: {{ .backend.servicePort }}
         {{- end }}
   {{- end }}
