Initialize the repository for helmfile project

--- a/charts/ingress/values.yaml
+++ b/charts/ingress/values.yaml
@@ -1,6 +1,6 @@
 ingress:
   name: ingress-service
-  namespace: helm-ns
+  namespace: helmfile-ns
   replicaCount: 1
   annotations: 
     class: nginx
